--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ html {
 body {
     padding-top: 100px;
     padding-bottom: 50px; 
+    display: flex;
 }
 
 
@@ -40,6 +41,8 @@ body {
 
 .header, .footer {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     background-color: #428262;
     /* opacity: 80%; */
     width: 100vw;
@@ -48,7 +51,6 @@ body {
 
 .header {
     display: flex;
-    justify-content: center;
     box-shadow: 0 -5px 20px #2d5843;
     top: 0;
     height: 100px
@@ -63,49 +65,114 @@ body {
 
 /*Styles for Logo */
 
-.logo {
-    height: 95px;
-    width: 95px;
-}
-
-.logo img {
-   object-fit: contain;
-   height: 95px;
-}
-
 /* Styles for Nav bar */
 
 .navigation {
     display: flex;
     height: inherit;
+    justify-content: center;
+    align-items: center;
     gap: 50px;
+    /* border: 1px solid black; */
+    width: 100%;
 }
 
-.navigation a {
-    font-size: 18px;
-    color: #0A311E;
-    letter-spacing: 0.5px;
+.links {
+    display: flex;
+    justify-content: space-evenly;
+    width: 800px;    
+}
+
+
+.links a {
     display: flex;
     align-items: center;
     text-align: center;
     line-height: 20px;
+    border-left: 2px solid #0A311E70;
+    border-right: 2px solid #0A311E70;
+    font-size: 18px;
+    color: #0A311E80;
+    letter-spacing: 0.7px;
+    padding: 0 10px 0 10px;
+    font-weight: bolder;
+    text-decoration: none;
+    filter: drop-shadow(0 0 5px #0A311E70);
+    transition: all 0.3s ease;
+}
+
+.links a:active {
+    border-left: 2px solid #0A311E90;
+    border-right: 2px solid #0A311E90;
+    color: #0A311E95;
 }
  
 /* styles for content */
 
+.background-img {
+    position: absolute;
+    width: auto;
+    height: 50vh;
+    opacity: 5%;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+}
+
 .page {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
     height: calc(100vh - 150px);
     width: 85vw;
-    background-color:#e3f5ec;
-   
+    background-color:#b8d0c499;
+    /* background-image: url(images/GB\ Newell\ Logo.png); */
+    background-size: contain;
+    background-repeat:no-repeat;
+    background-position: center;
+    padding: 20px;
 }
+
+/* Styles for About Page */
 
 .about {
 
 }
 
-.newMemorials {
 
+.content {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* border: 1px solid black; */
+    padding: 20px 40px;
+    width: 100%;
+    border: 1px solid black;
+}
+
+.picture{
+    border: 1px solid black;
+    height: 80%;
+    width: 300px
+}
+.description {
+    display: flex;
+    width: 50%
+}
+
+/* Styles for New Memorial Page */
+
+.newMemorials .content {
+    flex-direction: column;
+}
+
+.carosel {
+    border: 1px solid black;
+    width: 400px;
+    height: 300px;
 }
 
 .additionalInscriptions {
