Added images to the slider & started Additional Inscription

--- a/styles.css
+++ b/styles.css
@@ -124,10 +124,10 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    height: calc(100vh - 150px);
-    width: 85vw;
-    background-color: #b8d0c499;
     background-size: contain;
+    height: calc(100vh - 150px);
+    width: 800px;
+    background-color: #aff5d0;
     background-repeat: no-repeat;
     background-position: center;
     padding: 20px;
@@ -135,17 +135,19 @@ body {
 
 /* Styles for About Page */
 
-.about {}
-
 
 .content {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 20px 40px;
-    width: 100%;
-    border: 1px solid black;
+    width: 760px;
+    height: 533px;
+    /* border: 1px solid black; */
     z-index: 1;
+    background-color: #2d584350;
+    border-radius: 3px;
+    box-shadow: 0 0 10px #2d584980;
 }
 
 .picture {
@@ -189,6 +191,8 @@ body {
     box-shadow: 0 0 10px #1f3d2f70;
     height: 40px;
     width: 40px;
+    user-select: none;
+    cursor: pointer;
 }
 
 
@@ -209,14 +213,16 @@ body {
     display: flex;
     place-content: center;
     place-items: center;
-    border: 1px solid;
     width: inherit;
     height: inherit;
     position: absolute;
     opacity: 0;
     z-index: 0;
     transition: opacity 1s ease-in-out;
-    /* background-color: white; */
+}
+
+.slide img {
+    width: inherit;
 }
 
 .active {
@@ -226,6 +232,20 @@ body {
 }
 
 
-/* .additionalInscriptions {}
+/* Additional Inscriptions styles */
 
-.contact {} */
+.additionalInscriptions .description {
+    border: 1px solid black;
+}
+
+.additionalHeadstone {
+    border: 1px solid;
+    width: 50%;
+    height: 400px;
+    background-image: url(images/roundtop.svg);
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+   
+}
+/* .contact {}  */
